# Copyright 2026 <https://github.com/ppetr/>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "thin-status"
version = "0.1.1"
edition = "2021"
publish = true
license = "Apache-2.0"
description = "Low-overhead, production-grade error status type for Rust, heavily inspired by Abseil's absl::Status"
readme = "README.md"
homepage = "https://github.com/ppetr/rust-thin-status"
keywords = ["status", "error", "rpc", "grpc", "optimization"]
categories = ["asynchronous", "network-programming", "rust-patterns"]

[dependencies]
strum = { version = "0.27", features = ["derive"] }
triomphe = { version = "0.1.15", default-features = false, features = ["std"] }
libc = { version = "0.2", optional = true }
google-cloud-rpc = { version = "1.0", optional = true }
google-cloud-wkt = { version = "1.0", optional = true }

[features]
default = ["use_libc"]
use_libc = ["dep:libc"]
use_any = ["dep:google-cloud-wkt"]
use_cloud_rpc = ["use_any", "dep:google-cloud-rpc"]
